# ai-interview-backed

./: .env.example  .gitignore  README.md  ai_interview.db  pyproject.toml  requirements.txt
app/: crud.py  main.py  schemas.py
app/agents/: interview_agent.py  run.py
app/api/: api.py  deps.py
app/api/routers/: auth.py  interviews.py  users.py
app/api/v1/routes/: api_keys.py  auth.py  interviews.py  users.py
app/core/: config.py  livekit_manager.py  logging_config.py  security.py
app/crud/: api_keys.py  base.py  crud_interview.py  crud_user.py  interviews.py  tokens.py  users.py
app/db/: database.py  models.py
app/db/models/: __init__.py  api_key.py  base.py  interview.py  token_blocklist.py  user.py
app/prompts/: interview_prompts.py
app/schemas/: __init__.py  api_key.py  interview.py  user.py
app/services/: livekit_service.py
docs/: api_documentation.md
