[project]
name = "ai-interview-backed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "livekit",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt",
    "alembic",
    "psycopg2-binary",
    "python-multipart",
    "pydantic-settings",
    "python-dotenv",
    "livekit-api",
    "livekit-agents",
    "livekit-plugins-deepgram",
    "livekit-plugins-cartesia",
    "livekit-plugins-google",
    "livekit-plugins-silero",
    "livekit-plugins-elevenlabs",
    "aiofiles",
    "pillow",
    "scalar-fastapi>=1.2.3",
    "coloredlogs>=15.0.1",
]
