[project]
name = "ai-interview-backed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "livekit",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "alembic",
    "psycopg2-binary",
    "python-multipart",
    "pydantic-settings",
    "python-dotenv",
    "livekit>=0.15.0",
    "livekit-agents[cartesia,elevenlabs,groq]~=1.0",
    "livekit-api>=0.11.0",
    "livekit-plugins-deepgram>=0.6.0",
    "livekit-plugins-cartesia>=0.2.0",
    "livekit-plugins-google>=0.2.0",
    "livekit-plugins-silero>=0.2.0",
    "livekit-plugins-turn-detector>=0.2.0",
    "aiofiles",
    "pillow",
    "scalar-fastapi>=1.2.3",
    "coloredlogs>=15.0.1",
]
